swim_common/src/form/tests/derive/validated_form/generic_no_default.stderr
error[E0599]: the method `as_value` exists for struct `S<main::Invalid>`, but its trait bounds were not satisfied
  --> $DIR/generic_no_default.rs:29:37
   |
23 |     struct S<F> {
   |     -----------
   |     |
   |     method `as_value` not found for this
   |     doesn't satisfy `S<main::Invalid>: Form`
   |     doesn't satisfy `S<main::Invalid>: StructuralReadable`
   |     doesn't satisfy `S<main::Invalid>: StructuralWritable`
...
29 |     let _s = S { a: 1, f: Invalid }.as_value();
   |                                     ^^^^^^^^ method cannot be called on `S<main::Invalid>` due to unsatisfied trait bounds
   |
   = note: the following trait bounds were not satisfied:
           `S<main::Invalid>: StructuralReadable`
           which is required by `S<main::Invalid>: Form`
           `S<main::Invalid>: StructuralWritable`
           which is required by `S<main::Invalid>: Form`

error[E0277]: the trait bound `F: Default` is not satisfied
   --> $DIR/generic_no_default.rs:21:14
    |
21  |     #[derive(Form, ValidatedForm)]
    |              ^^^^ the trait `Default` is not implemented for `F`
    |
note: required by `std::default::Default::default`
    = note: this error originates in the derive macro `Form` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider further restricting this bound
    |
21  |     #[derive(Form + std::default::Default, ValidatedForm)]
    |                   ^^^^^^^^^^^^^^^^^^^^^^^
